use Double.valueOf, it's faster
git-svn-id: https://www.brockmann-consult.de/svn/os/ceres/trunk@4787 d90d2d48-2b33-0410-a973-e72f85796a02